fix: increases z-index on confirmation modal for mobile, say that the overlay is on top of the mobile navbar

--- a/lucuberate-client/src/components/ConfirmationModal/style.css
+++ b/lucuberate-client/src/components/ConfirmationModal/style.css
@@ -8,3 +8,9 @@
 .confirmation-modal .modal-title {
   text-align: left;
 }
+
+@media screen and (max-width: 720px) {
+  .confirmation-modal.modal {
+    z-index: 20;
+  }
+}
